# linkedin_games

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: index.md
docs/architecture/: adding-a-game.md  browser-automation.md  overview.md
docs/development/: changelog.md  contributing.md  setup.md  testing.md
docs/games/: index.md
docs/games/patches/: algorithm.md  dom-extraction.md  overview.md
docs/games/queens/: algorithm.md  dom-extraction.md  overview.md
docs/games/sudoku/: algorithm.md  dom-extraction.md  overview.md
docs/games/tango/: algorithm.md  dom-extraction.md  overview.md
docs/getting-started/: browser-setup.md  installation.md  quickstart.md
docs/reference/: patches.md  queens.md  sudoku.md  tango.md
linkedin_games/: __init__.py  _logging.py  browser.py  config.py
linkedin_games/patches/: __init__.py  __main__.py  extractor.py  player.py  solver.py
linkedin_games/queens/: __init__.py  __main__.py  extractor.py  player.py  solver.py
linkedin_games/sudoku/: __init__.py  __main__.py  extractor.py  player.py  solver.py
linkedin_games/tango/: __init__.py  __main__.py  extractor.py  player.py  solver.py
linkedin_games/zip/: __init__.py  __main__.py  extractor.py  player.py  solver.py
tests/patches/: test_solver.py
tests/queens/: __init__.py  test_solver.py
tests/sudoku/: test_solver.py
tests/tango/: test_solver.py
